--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://Kossy009.github.io/movie-search-app",
+  "homepage": "https://kossy009.github.io/movie-search-ap/",
   "name": "movie-search-app",
   "version": "0.1.0",
   "private": true,
