--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://kossy009.github.io/movie-search-ap/",
+  "homepage": "https://kosyabone.github.io/movie-search-app/",
   "name": "movie-search-app",
   "version": "0.1.0",
   "private": true,
@@ -35,6 +35,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.1.0"
+    "gh-pages": "^3.2.3"
   }
 }
